# whisper-tales

./: .gitignore  CLAUDE.md  README.md  index.html  voxdialog_instructions.md  voxdialog_specification.md  whispertales_specification.md
vox_dialog/: .gitignore  CLAUDE.md  README.md  check_db.exs  debug_api.exs  debug_whisper.exs  device_utils.py  generate_midwest_samples.py  mix.exs  pyproject.toml  reset_stuck_clips.exs  setup_speech_recognition.md  test_audio_formats.exs  test_chatterbox.py  test_local_model.exs  test_models.exs  test_speech_recognition.exs  test_tts_integration.exs  test_whisper_server.exs  transcribe_clips.exs  tts_with_accents.py  whisper_common.py  whisper_faster.py  whisper_vanilla.py
vox_dialog/assets/: tailwind.config.js
vox_dialog/assets/js/: app.js
vox_dialog/assets/js/hooks/: audio_controls.js  audio_processor.js
vox_dialog/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
vox_dialog/lib/: vox_dialog.ex  vox_dialog_web.ex
vox_dialog/lib/vox_dialog/: application.ex  mailer.ex  module_manager.ex  module_system.ex  repo.ex  speech_recognition.ex  voice.ex
vox_dialog/lib/vox_dialog/modules/: audio_library.ex  stt.ex  tts.ex  voice_session.ex
vox_dialog/lib/vox_dialog/speech_recognition/: transcription_worker.ex  whisper_backend.ex  whisper_factory.ex  whisper_faster.ex  whisper_server.ex  whisper_vanilla.ex
vox_dialog/lib/vox_dialog_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
vox_dialog/priv/repo/: seeds.exs
vox_dialog/test/: test_helper.exs
vox_dialog/test/support/: conn_case.ex  data_case.ex
(+33 files in other folders)
